Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <a href="courselisting.html">Courses</a>
         <a href="mentors.html">Mentors</a>
         <a href="paths.html">Paths</a>
-        <a href="eneterprisepage.html">Enterprise</a>
+        <a href="enterprisepage.html">Enterprise</a>
       </nav>
 
       <div style="display: flex; gap: 12px;">
